tests/restrict-github-team-external-identity/members-other-account/user-info.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: other-account
userInfo:
  username: system:serviceaccount:crossplane-system:provider-upjet-aws-f5d83a3e04ea
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:crossplane-system
    - system:authenticated
